objects/order_detail_sunrise2__c.object
<CustomObject>
    <description>Used for performance evaulation and incentive calculation.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>order details sunrise2 (Account_Name)</relationshipLabel>
        <relationshipName>order_details_sunrise21</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cumulative_No_of_Commercial_PV_orders__c</fullName>
        <label>Cumulative No. of Commercial PV orders</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_No_of_Residential_PV_orders__c</fullName>
        <label>Cumulative No. of Residential PV orders</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_kW_for_Commercial_Orders__c</fullName>
        <label>Cumulative kW for Commercial Orders</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_kW_for_Residential_Orders__c</fullName>
        <label>Cumulative kW for Residential Orders</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execute_2nd_Workflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Execute_2nd Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_kW_for_Commercial_Customer__c</fullName>
        <description>Field Required for Sunrise 2B</description>
        <label>Life kW for Commercial Customer</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_kW_for_Residential_Customer__c</fullName>
        <description>Field Required for Sunrise 2B</description>
        <label>Life kW for Residential Customer</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetPurchase_Check1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>NetPurchase Check1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetPurchase_Check2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetPurchase Check2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_purchase_amount_for_NA_CVAR__c</fullName>
        <description>Field Required for Sunrise 2B</description>
        <label>Net purchase amount for NA CVAR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_purchase_amount_for_NA_RVAR__c</fullName>
        <description>Field Required for Sunrise 2B</description>
        <label>Net purchase amount for NA RVAR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_QTD_Commercial_PV_Order__c</fullName>
        <label>Number of QTD Commercial PV Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_QTD_Residential_PV_Order__c</fullName>
        <label>Number of QTD Residential PV Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer_No__c</fullName>
        <label>Oracle_Customer_No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Period__c</fullName>
        <label>Performance Period</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QTD_Net_Purchase_Amount__c</fullName>
        <label>QTD Net Purchase Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Revenue_Override__c</fullName>
        <label>QTD Revenue Override</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_kW_for_Commercial_Orders__c</fullName>
        <label>QTD kW for Commercial Orders</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_kW_for_Residential_Orders__c</fullName>
        <label>QTD kW for Residential Orders</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_of_Commercial_orders_with_Inverter__c</fullName>
        <label>QTD % of Commercial orders with Inverter</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QTD_of_Residential_SmartPack_orders__c</fullName>
        <label>QTD % of Residential SmartPack orders</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quarter_Net_Purchase_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarter Net Purchase Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Racking_Lines_Inv_Amt_Non_Smart_Pack__c</fullName>
        <label>Racking Lines Inv Amt (Non Smart Pack)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sum_of_Watts_Invoiced_Inverters__c</fullName>
        <description>Field Required for Sunrise 2B</description>
        <label>Sum of Watts Invoiced (Inverters)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Watts_Invoiced_Smart_Pack__c</fullName>
        <description>Fields Required for Sunrise2B</description>
        <label>Sum of Watts Invoiced (Smart Pack)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Watts_Invoiced_CVAR__c</fullName>
        <description>Fields Required for Sunrise2B</description>
        <label>Total Watts Invoiced (CVAR)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Watts_Invoiced_RVAR__c</fullName>
        <description>Fields Required for Sunrise2B</description>
        <label>Total Watts Invoiced (RVAR)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_kW_shipped_via_online_ordering__c</fullName>
        <label>Total kW shipped via online ordering</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Calendar Year</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>base_currency__c</fullName>
        <label>base currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oracle_account_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>oracle account number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>order details sunrise2</relationshipLabel>
        <relationshipName>order_details_sunrise2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>oracle_data_type_number__c</fullName>
        <externalId>true</externalId>
        <label>oracle_data_type_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>order detail sunrise2</label>
    <nameField>
        <label>order details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>order details sunrise2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>